UI: fix unnecessary scrollbar appearing in tracker

--- a/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
+++ b/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
@@ -18,6 +18,7 @@
 		.ps-content {
 			padding-left: 10px;
 			padding-right: 10px;
+			padding-bottom: 10px;
 			pointer-events: none;
 			position: relative;
 			z-index: 2;
