--- a/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
+++ b/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
@@ -44,7 +44,7 @@
 			top: 0;
 			left: 0;
 			right: 0;
-			bottom: 0;
+			bottom: 10px;
 			background-image: radial-gradient(462.5px at 50% 50%, rgba(48, 35, 128, 0.7) 0%, rgba(24, 24, 43, 0.7) 100%),
 				url('/Files/assets/images/backgrounds/decktracker_bg.png');
 			background-size: 100%;
